# libtmcl

./: AUTHORS  COPYING  Makefile.am  Makefile.in  README  README-import.md  README.md  aclocal.m4  bootstrap.sh  configure  configure.ac
doc/: Makefile.am  Makefile.in  libtmcl.doxygen
doc/api/: libtmcl.tag
doc/api/html/: ._rsXXX_8h__dep__incl.map  annotated.html  classes.html  config_8h_source.html  convenience_8c_source.html  convenience_8h.html  convenience_8h__dep__incl.map  convenience_8h__dep__incl.md5  convenience_8h__incl.map  convenience_8h__incl.md5  convenience_8h_source.html  debug_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  group__AxisParam.html  group__CTLFuncs.html  group__MotionComm.html  group__ParComm.html  group__ROParam.html  group__RWParam.html  group__StatusCodes.html  group__TMCLComm.html  group__TMCLMisc.html  group__TypeCodes.html  index.html  interface_8c_source.html  interface_8h.html  interface_8h__dep__incl.map  interface_8h__dep__incl.md5  interface_8h__incl.map  interface_8h__incl.md5  interface_8h_source.html  (+37 more)
doc/api/latex/: annotated.tex  convenience_8h.tex  convenience_8h__dep__incl.eps  convenience_8h__dep__incl.md5  convenience_8h__incl.eps  convenience_8h__incl.md5  doxygen.sty  files.tex  group__AxisParam.aux  group__AxisParam.eps  group__AxisParam.tex  group__CTLFuncs.aux  group__CTLFuncs.eps  group__CTLFuncs.tex  group__MotionComm.aux  group__MotionComm.eps  group__MotionComm.tex  group__ParComm.aux  group__ParComm.eps  group__ParComm.tex  group__ROParam.aux  group__ROParam.eps  group__ROParam.tex  group__RWParam.aux  group__RWParam.eps  group__RWParam.tex  group__StatusCodes.aux  group__StatusCodes.tex  group__TMCLComm.aux  group__TMCLComm.eps  group__TMCLComm.tex  group__TMCLMisc.tex  group__TypeCodes.aux  group__TypeCodes.eps  group__TypeCodes.tex  index.tex  interface_8h.aux  interface_8h.tex  interface_8h__dep__incl.eps  interface_8h__dep__incl.md5  (+49 more)
example/: Makefile.am  Makefile.in  example01.c  pytmcl_move_to.py  tmcl_init_motor.c  tmcl_move_to.c
pyext/: Makefile.am  Makefile.in  __init__.py  swig_wrap.c  tmcl.i  tmcl.py
src/: Makefile.am  Makefile.in
src/tmcl/: ._debug.h  ._interface.c  Makefile.am  Makefile.in  config.h.in  convenience.c  convenience.h  debug.h  interface.c  interface.h  motor.c  motor.h  rsXXX.c  rsXXX.h  tmcl.h  tmcldefs.c  tmcldefs.h
